latentFactors_pipeline/.snakemake/log/2019-06-07T145636.188013.snakemake.log
Full Traceback (most recent call last):
  File "/home/pallagi4/miniconda3/lib/python3.6/site-packages/snakemake/__init__.py", line 401, in snakemake
    print_compilation=print_compilation)
  File "/home/pallagi4/miniconda3/lib/python3.6/site-packages/snakemake/workflow.py", line 743, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/da/ATI/bioinformatics/projects/ATI9EDA/2018-11-05_AMP_scRNAseq_RA_LN/latentFactors_pipeline/Snakefile", line 216
    factors_list_scvi = expand ( "{dir}/scvi_output/factors_{seed}_{{k}}.feather" , dir = output_dir , seed = seeds ) ,
                    ^
SyntaxError: invalid syntax

SyntaxError in line 112 of /da/ATI/bioinformatics/projects/ATI9EDA/2018-11-05_AMP_scRNAseq_RA_LN/latentFactors_pipeline/Snakefile:
invalid syntax
